Resolvendo problema de overflow nos navegadores de dispositivos moveis

--- a/styles/media.css
+++ b/styles/media.css
@@ -4,7 +4,6 @@
 
     body {
         overflow-x: hidden;
-        width: 100%;
     }
 
     header nav div.mobile-menu {
@@ -17,11 +16,11 @@
         top: 121px;
         right: 0;
         width: 100vw;
-        height: 60vh;
+        height: calc(100vh - 121px);
         background: rgba(47, 35, 37, 0.7);
         flex-direction: column;
         align-items: center;
-        justify-content: space-evenly;
+        justify-content: space-around;
         transform: translateX(100%);
         transition: transform 0.3s ease-in;
     }
